<?xml version="1.0"?>
<package format="2">
    <name>example_package</name>
    <version>0.0.1</version>
    <description>An example package</description>
    <maintainer email="msmart@uwaterloo.ca">msmart</maintainer>
    <license>TODO</license>
    <author>msmart@uwaterloo.ca</author>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>nodelet</depend>
    <depend>libbeam</depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <nodelet plugin="${prefix}/nodelets.xml"/>
    </export>
</package>
