# Core inspection library
add_library(${PROJECT_NAME}
  CloudCombiner.cpp
  GenerateReport.cpp
  ImageExtractor.cpp
  ImageLabeler.cpp
  LoadHandLabels.cpp
  MapLabeler.cpp
  QuantifyDefects.cpp
  SaveImages.cpp
)
target_include_directories(${PROJECT_NAME}
  PUBLIC
    ../../include
)
target_link_libraries(${PROJECT_NAME}
  beam::beam
  Boost::boost
  catkin::catkin
  PCL::PCL
  OpenCV::OpenCV
  nlohmann_json::nlohmann_json
  ${pcl_ros_LIBRARIES}
  ${rosbag_LIBRARIES}
  ${cv_bridge_LIBRARIES}
)
