# Core inspection library
add_library(${PROJECT_NAME}
  CloudCombiner.cpp
  GenerateReport.cpp
  ImageExtractor.cpp
  ImageLabeler.cpp
  MapLabeler.cpp
  Camera.cpp
  QuantifyDefects.cpp
  InspectionUtils.cpp
)
target_include_directories(${PROJECT_NAME}
  PUBLIC
    ../../include
)
target_link_libraries(${PROJECT_NAME}
  beam::beam
  Boost::boost
  PCL::PCL
  OpenCV::OpenCV
  nlohmann_json::nlohmann_json
  ${pcl_ros_LIBRARIES}
)
